--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==2.1.1"
-psycopg2-binary = "==2.7.4"
-psycopg2 = "==2.7.4"
+django = "==2.1.*"
+psycopg2-binary = "==2.7.*"
+psycopg2 = "==2.7.*"
+django-webpack-loader = "==0.6.*"
 
 [dev-packages]
 
